mathling schedule update

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -75,16 +75,17 @@ a:hover {
         <b>Oct 8</b> Strictly local sets (Deen)
     </li>
     <li>
-        <b>Oct 22</b> Stricly piecewise sets (Adam)
+        <b>Oct 22</b> Strictly local sets (continued) (Adam)
     </li>
     <li>
-        <b>Nov 5 (?)</b> Substitutable languages?
+        <b>Nov 5</b> <strong>(2:30pm)</strong> Strictly piecewise sets<br/>
+        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>, <a href="http://jeffreyheinz.net/papers/Rogers-HeinzEtAl-2010-LPTSS.pdf">Rogers et al. 2013</a>
     </li>
     <li>
-        <b>Nov 19 (?)</b> Subsequential functions?
+        <b>Nov 19 (?)</b> Substitutable sets
     </li>
     <li>
-        <b>Dec 3 (?)</b> ISL/OSL functions?
+        <b>Dec 3 (?)</b> Subsequential functions
     </li>
 </ul>
 
