--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,10 +79,13 @@ a:hover {
     </li>
     <li>
         <b>Nov 5</b> <strong>(2:30pm)</strong> Strictly piecewise sets<br/>
-        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>, <a href="http://jeffreyheinz.net/papers/Rogers-HeinzEtAl-2010-LPTSS.pdf">Rogers et al. 2013</a>
+        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>, <a href="http://jeffreyheinz.net/papers/Rogers-HeinzEtAl-2010-LPTSS.pdf">Rogers et al. 2013</a><br>
+        <a href="mathling20211105.pdf">Board from the meeting</a><br>
+        (video pending)
     </li>
     <li>
-        <b>Nov 19 (?)</b> Substitutable sets
+        <b>Nov 19</b> <strong>(2pm)</strong> Substitutable sets<br>
+        Background reading: <a href="https://alexc17.github.io/papers/clarkCogsci.pdf">Clark and Eyraud 2006</a>
     </li>
     <li>
         <b>Dec 3 (?)</b> Subsequential functions
