end of fall 2021

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -87,10 +87,11 @@ a:hover {
         <b>Nov 19</b> <strong>(2pm)</strong> Substitutable sets<br>
         Background reading: <a href="https://alexc17.github.io/papers/clarkCogsci.pdf">Clark and Eyraud 2006</a>
     </li>
-    <li>
-        <b>Dec 3 (?)</b> Subsequential functions
-    </li>
+    <!-- <li>
+         <b>Dec 3 (?)</b> Subsequential functions
+         </li> -->
 </ul>
+That's it for this semester! Tune in next semester, when we'll talk about <strong>learning</strong>. 
 
 <hr>
 <!------- SPRING 2021 SCHEDULE  -------->	
