--- a/mathling/index.html
+++ b/mathling/index.html
@@ -40,13 +40,14 @@ a:hover {
        <td><b>Faculty advisor:</b></td>
        <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
     </tr>
-    <!-- <tr> -->
-    <!-- <td><b>Student organizer:</b></td> -->
-    <!-- <td><p style="color:#B82814"> -->
-	  <!-- <a href="https://www.nchemey.com/">Natasha Chemey</a><br> -->
-	  <!-- </p> -->
-    <!-- </td> -->
-    <!-- </tr> -->
+    <tr>
+        <td><b>Student organizers:</b></td>
+        <td>
+	          Tatevik Yolyan<br>
+	          Hyunjung Joo<br>
+	      </p>
+        </td>
+    </tr>
     <tr>
       <td colspan="2">
         <b><a href="https://drive.google.com/drive/u/1/folders/1_IWGTLM8Jb7mcU5N9HklO8x6V7my3Bw-">Google drive folder</b></a> (requires permission)
@@ -58,6 +59,26 @@ a:hover {
       </td>
     </tr>
 	</table>
+
+<hr>
+<!------- Spring 2022 SCHEDULE  -------->	
+<h3>Spring 2022 Schedule</h3>
+
+<p>
+    Every other Friday (approximately), 10:30am, Spring St (room TBA)
+</p>
+
+<ul>
+    <li>
+        <b>Jan 28</b> Organizational meeting (on Zoom)
+    </li>
+    <li>
+        <b>Feb 11</b> The Gold Paradigm(s).<br/>
+        Background reading: Clark and Lappin, Ch. 4
+    </li>
+    <li>...</li>
+
+</ul>
 
 
 <hr>
