--- a/mathling/index.html
+++ b/mathling/index.html
@@ -62,11 +62,12 @@ a:hover {
 	</table>
 
 <hr>
+
 <!------- Spring 2022 SCHEDULE  -------->	
 <h3>Spring 2022 Schedule</h3>
 
 <p>
-    Every other Friday (approximately), 10:30am, Spring St (room TBA)
+    Every other Friday (approximately), 10:30am, Spring St (see below for room)
 </p>
 
 <ul>
@@ -74,399 +75,18 @@ a:hover {
         <b>Jan 28</b> Organizational meeting (on Zoom)
     </li>
     <li>
-        <b>Feb 11</b> The Gold Paradigm(s).<br/>
+        <b>Feb 11</b> (Spring St., Rm 203) The Gold Paradigm(s).<br/>
         Background reading: Clark and Lappin, Ch. 4
     </li>
     <li>...</li>
 
 </ul>
 
-
 <hr>
-<!------- FALL 2021 SCHEDULE  -------->	
-<h3>Fall 2021 Schedule</h3>
-<p>
-    Every other Friday (approximately), 2-3pm, Rm 108 (and on Zoom if requested)
-</p>
 
-<ul>
-    <li>
-        <b>Sep 24</b> Organization, <a href="https://en.wikipedia.org/wiki/Myhill%E2%80%93Nerode_theorem">Myhill-Nerode theorem</a> (Adam)
-    </li>
-    <li>
-        <b>Oct 8</b> Strictly local sets (Deen)
-    </li>
-    <li>
-        <b>Oct 22</b> Strictly local sets (continued) (Adam)
-    </li>
-    <li>
-        <b>Nov 5</b> <strong>(2:30pm)</strong> Strictly piecewise sets<br/>
-        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>, <a href="http://jeffreyheinz.net/papers/Rogers-HeinzEtAl-2010-LPTSS.pdf">Rogers et al. 2013</a><br>
-        <a href="mathling20211105.pdf">Board from the meeting</a><br>
-        (video pending)
-    </li>
-    <li>
-        <b>Nov 19</b> <strong>(2pm)</strong> Substitutable sets<br>
-        Background reading: <a href="https://alexc17.github.io/papers/clarkCogsci.pdf">Clark and Eyraud 2006</a>
-    </li>
-    <!-- <li>
-         <b>Dec 3 (?)</b> Subsequential functions
-         </li> -->
-</ul>
-That's it for this semester! Tune in next semester, when we'll talk about <strong>learning</strong>. 
-
-<hr>
-<!------- SPRING 2021 SCHEDULE  -------->	
-<p><b> Spring 2021 Schedule</b><br/>
-	Tuesdays 3:00 -- 4:00pm (EST) on Zoom.<br/>
-	Meetings for spring semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
-</p>
-<table style="white-space:nowrap;">
-	<tr>
-		<th>Date</th> 
-		<th>Title</th> 
-		<th>Speaker(s)</th> 
-		<th>Affiliation</th> 
-		<th>Files</th> 
-	</tr>
-	<!-- Jeff, Jon, Dakota -->
-	<tr>
-		<td>2/9</td>
-		<td>Generalized FSA</td>
-		<td><a href="http://jeffreyheinz.net/", target="_blank">Jeff Heinz</a>, 
-			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a>,
-			<a href= "https://vvulpes0.github.io/", target="_blank">Dakota Lambert</a>
-		</td>
-		<td>Stony Brook</td>
-		<td></td>
-	</tr>
-	
-	<!-- Adam, Chris -->
-	<tr>
-		<td>2/23</td>
-		<td>BMRS Primer</td>
-		<td><a href="https://adamjardine.net/", target="_blank">Adam Jardine</a>, 
-			<a href="https://chrisoakden.com/", target="_blank">Chris Oakden</a>
-		</td>
-		<td>Rutgers</td>
-		<td><a href="https://drive.google.com/file/d/1_1sc_T-7fUvkDhj68MWIHF8M2RoZEAuO/view", target="_blank">handout</a></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Chandlee & Jardine (2021). Recursive schemes for phonological analysis.
-				<a href="http://adamjardine.net/files/chandleejardineBMRSms.pdf", target="_blank">pdf</a></small>
-		</td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Bhaskar, Chandlee, Jardine, & Oakden (2020). 
-					BMRSs as a logical characterization of the subsequential functions.
-				<a href="http://adamjardine.net/files/bhaskaretalBMRSms.pdf", target="_blank">pdf</a></small>
-		</td>
-	</tr>
-	
-	<!-- Andrija -->
-	<tr>
-		<td>3/2</td>
-		<td>BMRS Morphology</td>
-		<td><a href="https://andrija-petrovic.github.io/", target="_blank">Andrija Petrovic</a></td>
-		<td>Stony Brook</td>
-		<td><a href="https://drive.google.com/file/d/12585FApd5pUxBFmJ3fc6ZSlmMVBhemBj/view", target="_blank">slides</a></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Andr&eacute;s (2014). Valencian hypocoristics: when morphology meets phonology. 
-				<a href="https://pdfs.semanticscholar.org/1355/0326faa9a617c8a01a083323676b078da60d.pdf", target="_blank">pdf</a></small>
-		</td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Andr&eacute;s (2013). Morphological Epenthesis in Romance: A Case for Lexical Conservatism. 
-				<a href="https://www.dce.unimore.it/site/home/dipartimento/archivio-eventi/igg39/home-igg39/documento900025971.html">download</a></small>
-		</td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Bachrach & Wagner (2007). Syntactically driven cyclicity vs. output-output correspondence.
-				<a href="https://www.ling.upenn.edu/Events/PLC/plc30/abstracts/34.pdf", target="_blank">pdf</a></small>
-		</td>
-	</tr>
-	
-	<!-- Eileen -->
-	<tr>
-		<td>3/9</td>
-		<td>Vowel Harmony &#38; Tutrugbu</td>
-		<td><a href="https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td>
-		<td>Rutgers</td>
-		<td></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>McCollum, Bakovic, Mai, & Meinhardt (2019). Unbounded circumambient patterns in segmental phonology.
-				<a href="https://ling.auf.net/lingbuzz/005051", target="_blank">lingbuzz</a></small>
-		</td>
-	</tr>
-	
-	<!-- Andrew -->
-	<tr>
-		<td>3/23</td>
-		<td>OT &#38; Context-Sensitive Languages</td>
-		<td><a href="https://aphonologist.github.io/", target="_blank">Andrew Lamont</a></td>
-		<td>UMass</td>
-		<td></td>
-	</tr>
-	
-	<!-- Nate -->
-	<tr>
-		<td>4/6</td>
-		<td>Atomic Properties of Stress</td>
-		<td><a href="https://nate-koser.github.io/", target="_blank">Nate Koser</a></td>
-		<td>Rutgers</td>
-		<td><a href="https://drive.google.com/file/d/1JbdFHoNBiOA1Jun-jJCo9Yo1IV_OxwnR/view", target="_blank">handout</a></td>
-	</tr>
-	
-	
-	<!-- Scott -->
-	<tr>
-		<td>4/20</td>
-		<td>Model Theory &#38; Phonological Features</td>
-		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
-		<td>Stony Brook</td>
-		<td><a href="https://drive.google.com/file/d/1iFY_RMymD7D8rp8IiYStP69VTWcmLWHU/view", target="_blank">handout</a></td>
-	</tr>
-	
-	<!-- Charles -->
-	<tr>
-		<td>4/27</td>
-		<td>Some(what) Logical Phonology</td>
-		<td><a href= "https://www.concordia.ca/artsci/cmll/faculty.html?fpid=charles-reiss", target="_blank">Charles Reiss</a></td> 
-		<td>Concordia</td>
-		<td><a href="https://drive.google.com/file/d/1Gr23qcAJ7mwaMDR4q7NgCGgcwHoSGgwG/view", target="_blank">handout</a></td>
-	</tr>
-	
-	
-	<!-- Erics-->
-	<tr>
-		<td>5/4</td>
-		<td>Weak Determinism, Interaction, and BMRS</td>
-		<td><a href= "https://sites.google.com/ucsd.edu/ebakovic/", target="_blank">Eric Bakovi&cacute;</a>, 
-			<a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a>
-		</td> 
-		<td>UCSD</td>
-		<td></td>
-	</tr>
-	
-	<!-- Eric M-->
-	<tr>
-		<td>5/11</td>
-		<td>Order theory, ternary features, and phonological maps</td>
-		<td><a href= "https://sites.google.com/view/eric-meinhardt/home", target="_blank">Eric Meinhardt</a></td> 
-		<td>UCSD</td>
-		<td></td>
-	</tr>
-</table>
-
-	
-	
-	
-	
-	
-	
-<!------- FALL 2020 SCHEDULE  -------->	
-<hr>
-<p><b> Fall 2020 Schedule</b><br/>
-	Fridays 3:00 -- 4:30pm (EST) on Zoom.<br/>
-	Meetings for fall semester are merged with <a href="https://linguistics.stonybrook.edu/about/index.php">Stony Brook Department of Linguistics</a><br>
-</p>
-<table style="white-space:nowrap;">
-	<tr>
-		<th>Date</th> 
-		<th>Topic</th> 
-		<th>Speaker(s)</th> 
-		<th>Affiliation</th> 
-		<th>Files</th> 
-	</tr>
-	<!-- Scott -->
-	<tr>	
-		<td>9/25</td> 
-		<td>NDEB Transformations</td> 
-		<td><a href= "https://snelson89.bitbucket.io/index.html", target="_blank">Scott Nelson</a></td> 
-		<td>Stony Brook</td>
-		<td><a href="https://drive.google.com/file/d/1sLd6__VnDp_fUQ3B2y-ZHrTfBVMNM9jM/view", target="_blank">handout</a></td>
-	</tr>
-	
-	<!-- Jon and Dakota -->
-  	<tr>	
-		<td>10/2</td> 
-		<td>Subregular Waffle </td> 
-		<td><a href= "https://vvulpes0.github.io/", target="_blank">Dakota Lambert</a>, 
-			<a href="https://www.jrawski.info/", target="_blank">Jon Rawski</a></td>
-   		<td>Stony Brook</td>
-		<td></td>
-	</tr>
-	
-	<!-- Eileen -->
-	<tr>	
-		<td>10/16</td> 
-		<td>Sour Grapes </td> 
-		<td> <a href= "https://www.eileenrblum.com/", target="_blank">Eileen Blum</a></td> 
-		<td>Rutgers</td>
-		<td><a href="https://drive.google.com/file/d/1huLwXBu_krBpYNK2Mb1ySsheCZM-a_tu/view", target="_blank">slides</a></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Smith & Ohara (2019). Computational Complexity and Sour-Grapes-Like Patterns.
-				<a href="https://pages.jh.edu/~csmit372/pdf/oharasmith_amp2018_paper.pdf", target="_blank">pdf</a></small></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Gainor, Lai, & Heinz (2012). Computational Characterizations of Vowel Harmony Patterns and Pathologies.
-				<a href="http://www.lingref.com/cpp/wccfl/29/paper2688.pdf", target="_blank">pdf</a></small></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Koser & Jardine (2019). The complexity of optimizing over strictly local constraints.
-				<a href="https://nate-koser.github.io/files/plc2019proc.pdf", target="_blank">pdf</a></small></td>
-	</tr>
-	
-	<!-- Natasha -->
-	<tr>	
-		<td>10/23</td> 
-		<td>Learning Biases</td> 
-		<td><a href="https://www.nchemey.com/", target="_blank">Natasha Chemey</a></td> 
-		<td>Rutgers</td>
-		<td></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Durvasula & Liter (2020). There is a simplicity bias when generalizing from ambiguous data.
-				<a href="https://ling.auf.net/lingbuzz/005120", target="_blank">lingbuzz</a></small></td>
-	</tr>
-	
-	<!-- Brian -->
-	<tr>
-		<td>10/30</td> 
-		<td>Pregroup Grammar Semantics</td> 
-		<td><a href="https://sites.math.rutgers.edu/~bp466/", target="_blank">Brian Pinsky</a></td> 
-		<td>Rutgers</td>
-		<td></td>
-	</tr>
-	<tr>	<!-- Reading -->
-		<td></td>
-		<td colspan="4"><small>Coecke, Sadrzadeh & Clark (2010). 
-					Mathematical Foundations for a Compositional Distributional Model of Meaning.
-					<a href="https://arxiv.org/pdf/1003.4394.pdf", target="_blank">pdf</a></small></td>
-	</tr>
-	
-	
-	<!-- Magdalena, Amber --> 
-	<tr>
-		<td>11/13</td> 
-		<td>Code Switching</td> 
-		<td><p style="color:#B82814">Magdalena Markowska, 
-			<a href="https://qihuixu.wixsite.com/qihui", target="_blank">Qihui Xu</a></p>
-		</td> 
-		<td>Stony Brook, CUNY</td>
-		<td><a href="https://drive.google.com/file/d/1AE7VwrCoW-th-bdyjMpahEkz6iTrGujH/view", target="_blank">slides</a></td>
-	</tr>
-</table>
+<h3><a href="archive.html">Past meetings</a></h3>
 
 <hr>
 
-	
-	
-	
-
-      
-       <p><b> Summer 2020 Schedule</b><br/>
-        Thursdays 10:30 -- 11:30am (EST) on WebEx.
-        </p>
-
-        <table>
-            <tr>
-                <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
-            </tr>
-            <tr>
-                <td>6/25</td> <td><a href= https://www.dropbox.com/s/va8p0s803qfwd1i/Slides__PAC_learning.pdf?dl=0/>PAC learning</a></td> <td>Huteng</td> <td>Video recap links: <a href= https://www.dropbox.com/s/y3skxivn9l63i9z/MathLing2020-PAC%20Learning%206-25_pt1.mp4?dl=0/>Part 1</a>, <a href= https://www.dropbox.com/s/aa1unmi1u23emkx/MathLing2020-PAC%20Learning-06-25_pt2.mp4?dl=0/>Part 2</a></td>
-            </tr>
-            <tr>
-                <td>7/9</td> <td><a href= https://hackmd.io/7iRWdy-9Ra25M9nDwKQrUA/>Bayesian learning</a></td> <td>Wenyue</td>
-                <td><a href="https://www.dropbox.com/s/zg20yppg5ua7mtl/Adnan%20Darwiche%20-%20Modeling%20and%20Reasoning%20with%20Bayesian%20Networks-Cambridge%20University%20Press%20%282009%29.pdf?dl=0">Reading</a>, <a href="https://gist.github.com/emeinhardt/b8a14be4464220f5b520ec72d676a0fe">Supplementary Resources</a></td>
-            </tr>
-            <tr>
-                <td></td> <td></td> <td></td> <td><a href= https://hackmd.io/c/tutorials/%2Fs%2Ftutorials/>HackMD Tutorial</a></td>
-            </tr>
-            <tr>
-              <td>7/23</td> <td><a href= "https://www.dropbox.com/s/uywoaap8iryim8u/MathLing%20Summer2020-%20Neural%20Networks.pdf.pdf?dl=0">Neural networks</a></td> <td> Eileen and Karen </td> <td><a href= "https://demo.allennlp.org/masked-lm?text=The%20doctor%20ran%20to%20the%20emergency%20room%20to%20see%20%5BMASK%5D%20patient">BERT Demo</a>, <a href= "https://colab.research.google.com/drive/1ywsvwO6thOVOrfagjjfuxEf6xVRxbUNO">BERT code</a></td>
-            </tr>
-            <tr>
-                <td></td> <td></td> <td></td> <td><a href= "https://www.dropbox.com/s/a37naaoxxx1lemf/MathLing%20Summer2020-Neural%20Networks%202020-07-23-10-35-57.mp4?dl=0">Video Recap</a>, <a href= "http://neuralnetworksanddeeplearning.com/index.html">Online Book</a></td>
-            </tr>
-            <tr>
-              <td>8/6</td> <td><a href= "https://www.dropbox.com/s/j8ddxucx88s460v/rawski-nnautomata_slides.pdf?dl=0">Neural Nets with automata</a></td> <td>Jon</td> <td><a href= "https://www.dropbox.com/s/puw0yre0q18mk7u/MathLing%20Summer2020-Neural%20Nets%20with%20automata%202020-08-06-10-35-45.mp4?dl=0">Video Recap</a>, <a href= "https://github.com/MaxAndrewNelson/Neural-Reduplication">RNN Github Repo</a></td>
-            </tr>
-            <tr>
-              <td></td> <td></td> <td></td> <td>Reading Links: <a href= "https://www.jrawski.info/publication/ndrp-scil-2020-neural/">Nelson, et al. (2020)</a>, <a href= "https://arxiv.org/pdf/2004.08500.pdf">Merrill, et al. (2020)</a>, <a href= "http://proceedings.mlr.press/v89/rabusseau19a/rabusseau19a.pdf">Rabusseau, Li, & Precup (2019)</a></td>
-            </tr>
-            <tr>
-              <td>8/20</td> <td><a href= "https://www.dropbox.com/s/5hf1q6w3gmrckmj/Dai_Slide__HMM.pdf?dl=0">Hidden Markhov Models</a></td> <td>Huteng</td> <td><a href= "https://www.dropbox.com/s/ia4gmm8l71f2yp0/MathLing%20Summer2020-Hidden%20Markhov%20Models%202020-08-20-10-39-37.mp4?dl=0">Video Recap</a>, <a href= "https://colab.research.google.com/drive/1IUe9lfoIiQsL49atSOgxnCmMR_zJazKI">Implementation (Jupyter Notebook)</a></td>
-            </tr>
-            <tr>
-              <td></td> <td></td> <td></td> <td> Reading Links: <a href= "https://web.stanford.edu/~jurafsky/slp3/A.pdf">Jurafsky & Martin (2019), Ch.A</a>, <a href= "https://web.ece.ucsb.edu/Faculty/Rabiner/ece259/Reprints/tutorial%20on%20hmm%20and%20applications.pdf">Rabiner (1989)</a></td>
-            </tr>
-        </table>
-
-
-        <b> Spring 2020 Schedule</b><br/>
-        <!-- <p><b> *Update, 3/12/2020: All meetings are postponed until further notice due to university's emergency COVID-19 policy on in-person meetings.*</b><br> -->
-        <!-- Any updates will be posted here and through the mailing list.  -->
-        <!-- </p> -->
-
-        Thursdays 1:30pm -- 2:30pm in 108, 18 Seminary Pl, unless otherwise noted<br/>
-        <table>
-            <tr>
-                <td><b>Date</b></td> <td><b>Topic</b></td> <td><b>Presenter</b></td> <td><b>Notes</b></td>
-            </tr>
-            <tr>
-                <td>2/13</td> <td><a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
-            </tr>
-            <tr>
-                <td>2/20</td> <td> Open house practice <td>Nate & Dine</td> <td>2-3pm</td>
-            </tr>
-            <tr>
-                <td>2/27</td> <td>  </td> <td></td> <td>No meeting; open house</td>
-            </tr>
-            <tr>
-                <td>3/5</td> <td> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.131.7593&rep=rep1&type=pdf">PCFG and entropy reduction</a> </td> <td>Brian</td> <td>2-3pm</td>
-            </tr>
-            <tr>
-                <td>3/12</td> <td><del>PLC practice talks</del></td> <td><del>Nick Danis</del></td> <td>Cancelled due to COVID-19</td>
-            </tr>
-            <tr>
-                <td></td><td></td><td><del>Shiori, Wenyue</del></td><td></td>
-            </tr>
-        </table>
-        <p><b>Spring 2020 Meeting 1: The outlook and import of mathematical linguistics</b>
-            <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available <a href="http://jeffreyheinz.net/talks/Heinz-2020-ML21C-slides.pdf">here</a>)</p>
-            <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. The date and venue of our first meeting are below: </p> 
-            <p><b>             <em>Date &amp; Time:</em> </b>Jan 23rd, 2020 from 1:30pm to 2:30pm</p>
-            <p><b>            <em> Venue:</em></b> Room 108 at 18 Seminary Pl, New Brunswick, NJ 08901 (Linguistics Department)</p>
-        <p><b>Fall 2019 Meetings </b>
-            <p>Theses meeting will be in room 204 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesdays, starting on September 4th.</p>
-            <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
-            <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
-      
-        <p><b>Spring 2019 Meeting 1 </b>: Learning substitutable languages</p>
-            <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
-                All are welcome!</p>
-<p><b>             <em>Date &amp; Time:</em> </b>Feb. 15, 2019 at 10am</p>
-<p><b>            <em> Venue:</em></b> Conference Room on 1 Spring St, New Brunswick, NJ 08901</p>
-
-
-    </div>
-
-
-    <!-- <p class="footer"> -->
-    <!-- </p> -->
 </body>
 </html>
