--- a/mathling/index.html
+++ b/mathling/index.html
@@ -78,6 +78,9 @@ a:hover {
         <b>Feb 11</b> (Spring St., Rm 203) The Gold Paradigm(s).<br/>
         Background reading: Clark and Lappin, Ch. 4
     </li>
+    <li>
+        <b>Feb 18</b> (Spring St., Rm TBA) The Gold Paradigm(s), cont'd, and strictly local learning<br/>
+    </li>
     <li>...</li>
 
 </ul>
