--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,7 +79,11 @@ a:hover {
         Background reading: Clark and Lappin, Ch. 4
     </li>
     <li>
-        <b>Feb 18</b> (Spring St., Rm TBA) The Gold Paradigm(s), cont'd, and strictly local learning<br/>
+        <b>Feb 18</b> (Spring St., Rm 204) The Gold Paradigm(s), cont'd<br/>
+    </li>
+    <li>
+        <b>Mar 4</b> (Spring St., Rm TBA) Strictly local and strictly piecewise learning<br/>
+        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>
     </li>
     <li>...</li>
 
