dates for rest of spring 2022

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -67,7 +67,7 @@ a:hover {
 <h3>Spring 2022 Schedule</h3>
 
 <p>
-    Every other Friday (approximately), 10:30am, Spring St (see below for room)
+    Every other Friday (approximately), 10:30am, Spring St, Rm 204
 </p>
 
 <ul>
@@ -82,10 +82,18 @@ a:hover {
         <b>Feb 18</b> (Spring St., Rm 204) The Gold Paradigm(s), cont'd<br/>
     </li>
     <li>
-        <b>Mar 4</b> (Spring St., Rm TBA) Strictly local and strictly piecewise learning<br/>
+        <b>Mar 4</b> (Spring St., Rm 204) Strictly local and strictly piecewise learning<br/>
         Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>
     </li>
-    <li>...</li>
+    <li>
+        <b>Mar 25</b> TBA
+    </li>
+    <li>
+        <b>Apr 8</b> TBA
+    </li>
+    <li>
+        <b>Apr 22</b> TBA
+    </li>
 
 </ul>
 
