--- a/mathling/index.html
+++ b/mathling/index.html
@@ -82,17 +82,18 @@ a:hover {
         <b>Feb 18</b> (Spring St., Rm 204) The Gold Paradigm(s), cont'd<br/>
     </li>
     <li>
-        <b>Mar 4</b> (Spring St., Rm 204) Strictly local and strictly piecewise learning<br/>
+        <b>Mar 4</b> (Spring St., Rm 204) Strictly local learning<br/>
         Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>
     </li>
     <li>
-        <b>Mar 25</b> TBA
+        <b>Mar 25</b> Strictly piecewise learning<br/>
+        Additional readings of interest: Heinz 2010, <a href="http://jeffreyheinz.net/papers/Heinz-2010-SEL.pdf"><i>String Extension Learning</i></a>
     </li>
     <li>
-        <b>Apr 8</b> TBA
+        <b>Apr 8</b> Presentations drawn from distributions (Huteng Dai)
     </li>
     <li>
-        <b>Apr 22</b> TBA
+        <b>Apr 22</b> Presentations drawn from distributions (cont'd)
     </li>
 
 </ul>
