finishing out spring 22

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -90,7 +90,8 @@ a:hover {
         Additional readings of interest: Heinz 2010, <a href="http://jeffreyheinz.net/papers/Heinz-2010-SEL.pdf"><i>String Extension Learning</i></a>
     </li>
     <li>
-        <b>Apr 8</b> Presentations drawn from distributions (Huteng Dai)
+        <b>Apr 8</b> Presentations drawn from distributions (Huteng Dai)<br/>
+        Reading: <a href="http://homepages.math.uic.edu/~lreyzin/papers/angluin88b.pdf">Angluin and Laird 1988</a>, up to Sec 1.2.
     </li>
     <li>
         <b>Apr 22</b> Presentations drawn from distributions (cont'd)
