--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="https://github.com/rucll">Lab Github</a></li>
-        <li><a href="schedule.html">Lab meetings</a></li>
+        <!-- <li><a href="schedule.html">Lab meetings</a></li> -->
+        <li><a href="https://rutgerscomplinglab.slack.com">Lab Slack (members only)</span></a></li>
         <li><a href="mathling/">Math ling group</a></li>
-        <li><a href="https://drive.google.com/drive/folders/18gkxZX8r3mxqQbNKsb91zqjKsebCc4rz?usp=sharing">Lab Drive <span style="font-family:Trebuchet,sans-serif;font-size:90%">(members only)</span></a></li>
         <!--<li><a href="events.html">Events</a></li> -->
     </ul>
 
@@ -42,48 +42,49 @@
 
         <p><b>Lab director:</b> <a href="http://adamjardine.net">Adam Jardine</a> (Rutgers Department of Linguistics)</p>
 
+
         <hr>
 
         <h4>Students</h4>
+
         <table>
             <tr>
-                <td>
-	                  <ul>
-	                      <li><a href="https://www.eileenrblum.com/">Eileen Blum</a></li>
-	                      <li><a href="https://pterosdiacos.github.io">Yu Cao</a></li>
-                        <li><a href="http://hutengdai.com/">Huteng Dai</a></li>
-                        <li>Wenyue Hua</li>
-	                  </ul>
-                </td>
-                <td>
-	                  <ul>
-                        <li>Shiori Ikawa</li>
-	                      <li><a href="https://nate-koser.github.io/">Nathan Koser</a></li>
-	                      <li><a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></li>
-	                      <li><a href="https://coakden.github.io/">Christopher Oakden</a></li>
-	                  </ul>
-                </td>
+                <td rowspan ="2"><b>Graduate</b></td>
+                <td><a href="http://hutengdai.com/">Huteng Dai</a></td>
             </tr>
+                <tr>
+                    <td>Tatevik Yolyan</td>
+                </tr>
+                <tr>
+                    <td rowspan ="1"><b>Undergraduate</b></td>
+                    <td>Haolin Daniel Jin</td>
+                </tr>
         </table>
 
-        <!-- <h4>Undergrads</h4>-->
 
         <hr>
 
         <h4>Events</h4>
 
         <ul>
-            <li>We'll be hosting <a href="necphon2019/index.html">NECPhon 2019</a> on Nov 16</li>
-            <li>Adam will be presenting with Jane Chandlee at <a href="http://www.cs.toronto.edu/mol2019/">MoL 2019</a></li>
-            <li>We recently took a trip to Stony Brook to attend <a href="https://outde.xyz/2019-04-21/computational-phonology-workshop-3.html#computational-phonology-workshop-3">Computational Phonology Workshop 3</a>.</li>
-            <li>In 2018 we hosted the <a href="workshop.html">Second Rutgers Computational Phonology Workshop</a></li>
+            <li> Nov 2022:
+                After a period of inactivity due to COVID-19, the lab is back in action!
+                In November, we hosted a talk by PhD alum Luca Iacoponi, who discussed his experiences applying his research experience in linguistics to a career with Amazon.
+                <img style="width:600px" src="luca.jpg" class="center" vspace="20">
+            </li>
+            <li> Oct 2022:
+                Adam Jardine and Huteng Dai presented their work at AMP 2022. 
+                For Adam's tutorial on recursive schemes for phonological analysis, <a href="http://adamjardine.net/bmrstutorial/">click here</a>.
+            </li>
         </ul>
 
     </div>
 
 
-<p class="footer">
-    Last updated: Oct 20 2019<br>
-</p>
+    <p class="footer">
+        <script language="Javascript">
+         document.write("Last updated: " + document.lastModified +"");
+        </script>
+    </p>
 </body>
 </html>
