--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
                 <td rowspan ="2"><b>Graduate</b></td>
                 <td><a href="http://hutengdai.com/">Huteng Dai</a></td>
             </tr>
-                <tr>
-                    <td>Tatevik Yolyan</td>
-                </tr>
+            <tr>
+                <td>Tatevik Yolyan</td>
+            </tr>
+            <tr>
+                <td>Hyunjung Joo</td>
+            </tr>
+            <tr>
+                <td>Vincent Czarnecki</td>
+            </tr>
                 <tr>
                     <td rowspan ="1"><b>Undergraduate</b></td>
                     <td>Haolin Daniel Jin</td>
