fall 23 first update

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -43,7 +43,7 @@ a:hover {
     <tr>
         <td><b>Student organizers:</b></td>
         <td>
-	          Tatevik Yolyan<br>
+	          Vincent Czarnecki<br>
 	          Hyunjung Joo<br>
 	      </p>
         </td>
@@ -63,39 +63,29 @@ a:hover {
 
 <hr>
 
-<!------- Spring 2022 SCHEDULE  -------->	
-<h3>Spring 2022 Schedule</h3>
+<!------- Fall 2023 SCHEDULE  -------->	
+<h3>Fall 2023 Schedule</h3>
 
 <p>
-    Every other Friday (approximately), 10:30am, Spring St, Rm 204
+    Every other Wed (approximately), 10am, Rm 108
 </p>
 
 <ul>
     <li>
-        <b>Jan 28</b> Organizational meeting (on Zoom)
+        <b>Sep 6</b> Organizational meeting (joint w/ PhonX)
     </li>
     <li>
-        <b>Feb 11</b> (Spring St., Rm 203) The Gold Paradigm(s).<br/>
-        Background reading: Clark and Lappin, Ch. 4
+        <b>Sep 20</b> Why mathematical linguistics? (Vinny)<br>
+        Background reading: TBA
     </li>
     <li>
-        <b>Feb 18</b> (Spring St., Rm 204) The Gold Paradigm(s), cont'd<br/>
+        <b>Oct 4</b> First order logic and the star-free languages (Brian) <br>
+        Background reading: TBA
     </li>
     <li>
-        <b>Mar 4</b> (Spring St., Rm 204) Strictly local learning<br/>
-        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>
+        <b>Oct 18</b>  TBA
     </li>
-    <li>
-        <b>Mar 25</b> Strictly piecewise learning<br/>
-        Additional readings of interest: Heinz 2010, <a href="http://jeffreyheinz.net/papers/Heinz-2010-SEL.pdf"><i>String Extension Learning</i></a>
-    </li>
-    <li>
-        <b>Apr 8</b> Presentations drawn from distributions (Huteng Dai)<br/>
-        Reading: <a href="http://homepages.math.uic.edu/~lreyzin/papers/angluin88b.pdf">Angluin and Laird 1988</a>, up to Sec 1.2.
-    </li>
-    <li>
-        <b>Apr 22</b> Presentations drawn from distributions (cont'd)
-    </li>
+    
 
 </ul>
 
