--- a/mathling/archive.html
+++ b/mathling/archive.html
@@ -35,6 +35,41 @@ a:hover {
 	
 <a href="index.html">(back to main page)</a>
 
+<!------- Spring 2022 SCHEDULE  -------->	
+<h3>Spring 2022 Schedule</h3>
+
+<p>
+    Every other Friday (approximately), 10:30am, Spring St, Rm 204
+</p>
+
+<ul>
+    <li>
+        <b>Jan 28</b> Organizational meeting (on Zoom)
+    </li>
+    <li>
+        <b>Feb 11</b> (Spring St., Rm 203) The Gold Paradigm(s).<br/>
+        Background reading: Clark and Lappin, Ch. 4
+    </li>
+    <li>
+        <b>Feb 18</b> (Spring St., Rm 204) The Gold Paradigm(s), cont'd<br/>
+    </li>
+    <li>
+        <b>Mar 4</b> (Spring St., Rm 204) Strictly local learning<br/>
+        Background reading: <a href="http://jeffreyheinz.net/papers/Heinz-2010-LLP.pdf">Heinz 2010</a>
+    </li>
+    <li>
+        <b>Mar 25</b> Strictly piecewise learning<br/>
+        Additional readings of interest: Heinz 2010, <a href="http://jeffreyheinz.net/papers/Heinz-2010-SEL.pdf"><i>String Extension Learning</i></a>
+    </li>
+    <li>
+        <b>Apr 8</b> Presentations drawn from distributions (Huteng Dai)<br/>
+        Reading: <a href="http://homepages.math.uic.edu/~lreyzin/papers/angluin88b.pdf">Angluin and Laird 1988</a>, up to Sec 1.2.
+    </li>
+    <li>
+        <b>Apr 22</b> Presentations drawn from distributions (cont'd)
+    </li>
+
+</ul>
 
 <hr>
 <!------- FALL 2021 SCHEDULE  -------->	
