--- a/mathling/index.html
+++ b/mathling/index.html
@@ -83,7 +83,7 @@ a:hover {
         Background reading: TBA
     </li>
     <li>
-        <b>Oct 11</b> Continuing First order logic and the star-free languages (Brian)
+        <b>Oct 11</b> Continuing first order logic and the star-free languages (Brian)
     </li>
     
 
