--- a/mathling/index.html
+++ b/mathling/index.html
@@ -45,6 +45,7 @@ a:hover {
         <td>
 	          Vincent Czarnecki<br>
 	          Hyunjung Joo<br>
+		<img style="width:600px" src="mathling.jpg" class="center" vspace="20">
 	      </p>
         </td>
     </tr>
