--- a/mathling/index.html
+++ b/mathling/index.html
@@ -86,7 +86,7 @@ a:hover {
     <li>
         <b>Oct 11</b> Continuing first order logic and the star-free languages (Brian)
     </li>
-    
+	<b>Nov 8</b> <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012</a>
 
 </ul>
 
