--- a/mathling/index.html
+++ b/mathling/index.html
@@ -89,7 +89,9 @@ a:hover {
     <li>
 	<b>Nov 8</b> <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012</a> (Huteng)
     </li>
-	    
+	<li>
+	<b>Nov 15</b> Logical characteristics of phonology <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012 </a> Chapter 6 (Prof. Adam Jardine)
+    </li>
 </ul>
 
 <hr>
