--- a/mathling/index.html
+++ b/mathling/index.html
@@ -90,7 +90,7 @@ a:hover {
 	<b>Nov 8</b> <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012</a> (Huteng)
     </li>
 	<li>
-	<b>Nov 15</b> Logical characteristics of phonology <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012 </a> Chapter 6 (Prof. Adam Jardine)
+	<b>Nov 15</b> Logical characteristics of phonology <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> - Jäger & Rogers 2012 </a> Chapter 6 (Prof. Adam Jardine)
     </li>
 </ul>
 
