--- a/mathling/index.html
+++ b/mathling/index.html
@@ -89,8 +89,11 @@ a:hover {
     <li>
 	<b>Nov 8</b> <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012</a> (Huteng)
     </li>
-	<li>
+    <li>
 	<b>Nov 15</b> Logical characteristics of phonology - <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers (2012) Chapter 6</a>  (Prof. Adam Jardine)
+    </li>
+    <li>
+	<b>Dec 6</b> Continuing Logical characteristics of phonology - <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers (2012) Chapter 6</a>  (Prof. Adam Jardine)
     </li>
 </ul>
 
