--- a/mathling/index.html
+++ b/mathling/index.html
@@ -93,7 +93,7 @@ a:hover {
 	<b>Nov 15</b> Logical characteristics of phonology - <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers (2012) Chapter 6</a>  (Prof. Adam Jardine)
     </li>
     <li>
-	<b>Dec 6</b> Continuing Logical characteristics of phonology - <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers (2012) Chapter 6</a>  (Prof. Adam Jardine)
+	<b>Dec 6</b> Continuing logical characteristics of phonology (Prof. Adam Jardine)
     </li>
 </ul>
 
