--- a/mathling/index.html
+++ b/mathling/index.html
@@ -82,42 +82,9 @@ a:hover {
     </li>
     <li>
         <b>Feb 28</b> Transducers, Logic and Algebra for Functions of Finite Words (Merlin) <br>
-        Background reading: Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
+        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
     </li>
 
-</ul>
-
-<!------- Fall 2023 SCHEDULE  -------->	
-<h3>Fall 2023 Schedule</h3>
-
-<p>
-    Every other Wed (approximately), 10am, Rm 108
-</p>
-
-<ul>
-    <li>
-        <b>Sep 6</b> Organizational meeting (joint w/ PhonX)
-    </li>
-    <li>
-        <b>Sep 20</b> Why mathematical linguistics? (Vinny)<br>
-        Background reading: TBA
-    </li>
-    <li>
-        <b>Oct 4</b> First order logic and the star-free languages (Brian) <br>
-        Background reading: TBA
-    </li>
-    <li>
-        <b>Oct 11</b> Continuing first order logic and the star-free languages (Brian)
-    </li>
-    <li>
-	<b>Nov 8</b> <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers 2012</a> (Huteng)
-    </li>
-    <li>
-	<b>Nov 15</b> Logical characteristics of phonology - <a href="https://royalsocietypublishing.org/doi/pdf/10.1098/rstb.2012.0077"> Jäger & Rogers (2012) Chapter 6</a>  (Prof. Adam Jardine)
-    </li>
-    <li>
-	<b>Dec 6</b> Continuing logical characteristics of phonology (Prof. Adam Jardine)
-    </li>
 </ul>
 
 <hr>
