--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -1,97 +1,92 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Adam Jardine">
-  <title>Rutgers MathLing Group </title>
+  <titleT2024 Rutgers Computational Phonology Workshop</title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="../style.css">
-  <meta name="description" content="Rutgers Mathling Group">
-  <meta name="keywords" content="linguistics,Rutgers,phonology,syntax,semantics,mathematical linguistics,computational linguistics">
+  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Rutgers Computational Linguistics Lab">
+  <meta name="keywords" content="linguistics,Rutgers,phonology,computational linguistics">
+  <link href='https://fonts.googleapis.com/css?family=Volkhov' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet"> 
-	
-<style>	
-a:link, a:visited, a:active {
-  	color: #B82814;
-  	text-decoration: none;
-  	display: inline-block; 
-}
-a:hover {
-	color: #E5260C;
-}
-</style>
+  <link href='https://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
 </head>
 
-<body style="margin: 3% 25% 5% 15%">
-<!-- <img style="width:660px;height:200px" src="lab.jpg"> -->
+<body>
 
-<h1 id="rucll">Rutgers MathLing Group</h1>
+<div style="margin-left:12%">
 
-	
-<!-- Group description -->
-<div style="min-height:500px">
-<p>This is an informal reading group for mathematical and computational linguistics discussions. We are affiliated with the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a> and the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a>.</p>
-  <table>
-    <tr>
-       <td><b>Faculty advisor:</b></td>
-       <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
-    </tr>
-    <tr>
-        <td><b>Student organizers:</b></td>
-        <td>
-	          Chenli Wang<br>
-		  Vincent Czarnecki<br>
-	          Hyunjung Joo<br>
-		<img style="width:600px" src="mathling.jpg" class="center" vspace="20">
-	      </p>
-        </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <b><a href="https://drive.google.com/drive/u/1/folders/1_IWGTLM8Jb7mcU5N9HklO8x6V7my3Bw-">Google drive folder</b></a> (requires permission)
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <!-- <b><a href="https://email.rutgers.edu/mailman/listinfo/math_ling">Mailing list</a></b> -->
-	 <b><a href="https://lists.rutgers.edu/mm3/mailman3/lists/math_ling.email.rutgers.edu/">Mailing List</a></b>
-      </td>
-    </tr>
-	</table>
+<h1 id="rucll"> 2024 Rutgers Computational Phonology Workshop</h1>
 
-<hr>
+<p class="contact">
+  Hosted by the <a href="https://adamjardine.github.io/rucll/">Rutgers Computational Linguistics Lab</a></br>
+</p></br>
 
-<!------- Spring 2024 SCHEDULE  -------->	
-<h3>Spring 2024 Schedule</h3>
-
-<p>
-    Every other Wed (approximately), 10am, Rm 108
-</p>
+<h3>Schedule</h3>
 
 <ul>
-    <li>
-        <b>Jan 24</b> Organizational meeting (joint w/ PhonX)
-    </li>
-    <li>
-        <b>Feb 14</b> Introduction to logical transductions (FO) (Prof. Adam Jardine)<br>
-        Background reading: <a href="https://www.glossa-journal.org/article/id/5423/"> Chandlee & Jardine (2021) </a>
-    </li>
-    <li>
-        <b>Feb 28</b> Transducers, Logic and Algebra for Functions of Finite Words (Merlin) <br>
-        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
-    </li>
+  <li>
+    September 27th, 2024:<br/>
+    1pm - 5pm, Rm 203, <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
+  </li>
 
+  <br/>
+  
+  <li>
+    October 26th, 2018:<br/>
+    10am - 3pm, Rm 403, <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
+	<ul>
+	  <li>
+	    10am  - 11:30am Math ling/PhonX group meeting, led by Kevin McMullin</br>
+	  </li>
+	</ul>
+	3 - 5pm, Rm 108, <a href="https://goo.gl/maps/o4fQXN7utz72">18 Seminary Pl</a> (Linguistics Department)
+	<ul>
+	  <li>
+	    Colloquium talk by Kevin McMullin
+	  </li>
+	</ul>
+  </li>
+
+  <br/>
+
+  <li>October 27th, 2018</br>
+    9am - 3pm, Rm 2100, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
 </ul>
 
-<hr>
+<h3>Parking</h3>
 
-<h3><a href="archive.html">Past meetings</a></h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.285059339139!2d-74.44690078570017!3d40.497242739981985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70e711073d8bf62e!2sGateway+Garage!5e0!3m2!1sen!2sus!4v1540329199031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-<hr>
+<!--
+<ul class="nav">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="papers.html">Papers</a></li>
+  <li><a href="presentations.html">Presentations</a></li>
+  <li><a href="teaching.html">Teaching</a></li>
+  <li><a href="files/cv.pdf">CV (pdf)</a></li>
+</ul>
 
+<div style="margin-left:20%;padding:1px 16px;">
+
+  
+  <p> <img src="files/me.jpg" alt="Mug shot" style="float:right;height:170px;">
+ 
+    I'm an Assistant Professor of phonology at the Rutgers <a href="https://ling.rutgers.edu">Department of Linguistics</a>.</p>
+
+  
+</div>
+
+<br/>
+-->
+<p class="footer">
+Last updated: Oct 15 2018<br>
+</p>
 </body>
 </html>
