--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -1,31 +1,38 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Adam Jardine">
-  <titleT2024 Rutgers Computational Phonology Workshop</title>
+  <title>Rutgers MathLing Group </title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Rutgers Computational Linguistics Lab">
-  <meta name="keywords" content="linguistics,Rutgers,phonology,computational linguistics">
-  <link href='https://fonts.googleapis.com/css?family=Volkhov' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="../style.css">
+  <meta name="description" content="Rutgers Mathling Group">
+  <meta name="keywords" content="linguistics,Rutgers,phonology,syntax,semantics,mathematical linguistics,computational linguistics">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet"> 
+	
+<style>	
+a:link, a:visited, a:active {
+  	color: #B82814;
+  	text-decoration: none;
+  	display: inline-block; 
+}
+a:hover {
+	color: #E5260C;
+}
+</style>
 </head>
 
-<body>
+<body style="margin: 3% 25% 5% 15%">
+<!-- <img style="width:660px;height:200px" src="lab.jpg"> -->
 
-<div style="margin-left:12%">
-
-<h1 id="rucll"> 2024 Rutgers Computational Phonology Workshop</h1>
+<h1 id="rucll">2024 Rutgers Computational Phonology Workshop</h1>
 
 <p class="contact">
-  Hosted by the <a href="https://adamjardine.github.io/rucll/">Rutgers Computational Linguistics Lab</a></br>
+  Hosted by the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a></br>
 </p></br>
 
 <h3>Schedule</h3>
@@ -33,31 +40,30 @@
 <ul>
   <li>
     September 27th, 2024:<br/>
-    1pm - 5pm, Rm 203, <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
+    1pm - 5pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
   </li>
 
   <br/>
   
   <li>
-    October 26th, 2018:<br/>
-    10am - 3pm, Rm 403, <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
+    September 28th, 2024:<br/>
+    10am - 3pm, Rm , <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
 	<ul>
 	  <li>
 	    10am  - 11:30am Math ling/PhonX group meeting, led by Kevin McMullin</br>
 	  </li>
 	</ul>
-	3 - 5pm, Rm 108, <a href="https://goo.gl/maps/o4fQXN7utz72">18 Seminary Pl</a> (Linguistics Department)
+	3 - 5pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
 	<ul>
 	  <li>
-	    Colloquium talk by Kevin McMullin
 	  </li>
 	</ul>
   </li>
 
   <br/>
 
-  <li>October 27th, 2018</br>
-    9am - 3pm, Rm 2100, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
+  <li>September 29th, 2024</br>
+    9am - 3pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
 </ul>
 
 <h3>Parking</h3>
@@ -86,7 +92,7 @@
 <br/>
 -->
 <p class="footer">
-Last updated: Oct 15 2018<br>
+Last updated: Aug 22 2024<br>
 </p>
 </body>
 </html>
