--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -47,13 +47,7 @@ a:hover {
   
   <li>
     September 28th, 2024:<br/>
-    10am - 3pm, Rm , <a href="https://goo.gl/maps/SBi1FVxsc292">One Spring St</a>
-	<ul>
-	  <li>
-	    10am  - 11:30am Math ling/PhonX group meeting, led by Kevin McMullin</br>
-	  </li>
-	</ul>
-	3 - 5pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
+	10am - 5pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
 	<ul>
 	  <li>
 	  </li>
